--- a/src/index.css
+++ b/src/index.css
@@ -3,13 +3,15 @@
   margin: 0;
   box-sizing: border-box;
 }
-html,
-body {
-  background-color: #fefefe;
+.bgDark {
+  background-color: #454545;
+  color: #fff;
 }
-.container {
+.view {
+  height: 100vh;
   display: flex;
   justify-content: center;
   align-items: center;
-  min-height: 100vh;
+  width: 100vw;
+  font-size: 5rem;
 }
